--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
     <!-- === Header ===  -->
 
     <header class="header">
-
       <!-- mobile menu -->
-
-      
-
 
       <!-- mobile menu ends -->
       <div class="container header__content">
@@ -41,7 +37,7 @@
             <li><a href="#" class="header__link">Kontakt</a></li>
           </ul>
         </nav>
-        
+
         <ul class="header__contact">
           <li>
             <a href="mailto:info@devstudio.com" class="header__contact-item"
@@ -410,7 +406,7 @@
     <!--Footer-->
 
     <footer class="footer">
-      <div class="container flex">
+      <div class="container flex footer__wrapper">
         <div class="footer-container">
           <div class="footer-logo-style">
             <a href="#" class="footer__logo"> Web<span class="footer__logo--white">Studio</span></a>
@@ -474,7 +470,7 @@
               />
             </label>
             <button type="submit" class="footer__newsletter-button">
-              <span>Zapisz się</span>
+              <p>Zapisz się</p>
               <svg class="footer__newsletter-icon" width="24" height="24">
                 <use href="./images/icons.svg#send-icon"></use>
               </svg>
@@ -485,6 +481,5 @@
     </footer>
 
     <script src="./js/modal.js"></script>
-  
   </body>
 </html>
