--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
               />
             </label>
             <button type="submit" class="footer__newsletter-button">
-              <p>Zapisz się</p>
+              <span>Zapisz się</span>
               <svg class="footer__newsletter-icon" width="24" height="24">
                 <use href="./images/icons.svg#send-icon"></use>
               </svg>
