zadanie do oddania

--- a/index.html
+++ b/index.html
@@ -264,7 +264,13 @@
           <h2 class="our-team__header">Nasz zespół</h2>
           <ul class="our-team__list">
             <li class="our-team__item">
-              <img src="./images/john-doe-product-designer.jpg" alt="men with beard" width="270" height="260" />
+              <img
+                srcset="images/product-designer@1.jpg 1x, images/product-designer@2.jpg 2x"
+                src="images/product-designer@1.jpg"
+                alt="men with beard"
+                width="270"
+                height="260"
+              />
 
               <h4 class="our-team__team-member">John Doe</h4>
               <p class="our-team__position">Product Designer</p>
@@ -294,7 +300,13 @@
               </div>
             </li>
             <li class="our-team__item">
-              <img src="./images/frontend-developer.jpg" alt="girl with blond hair" width="270" height="260" />
+              <img
+                srcset="images/frontend-developer@1.jpg 1x, images/frontend-developer@2.jpg 2x"
+                src="images/frontend-developer@1.jpg"
+                alt="girl with blond hair"
+                width="270"
+                height="260"
+              />
 
               <h4 class="our-team__team-member">John Doe</h4>
               <p class="our-team__position">Frontend Developer</p>
@@ -324,7 +336,13 @@
               </div>
             </li>
             <li class="our-team__item">
-              <img src="./images/john-doe-marketing.jpg" alt="smilling man" width="270" height="260" />
+              <img
+                srcset="images/marketing@1.jpg 1x, images/marketing@2.jpg 2x"
+                src="images/marketing@1.jpg"
+                alt="smilling man"
+                width="270"
+                height="260"
+              />
 
               <h4 class="our-team__team-member">John Doe</h4>
               <p class="our-team__position">Marketing</p>
@@ -354,7 +372,13 @@
               </div>
             </li>
             <li class="our-team__item">
-              <img src="./images/man-with-beard.jpg" alt="man with beard" width="270" height="260" />
+              <img
+                srcset="images/ui-designer@1.jpg 1x, images/ui-designer@2.jpg 2x"
+                src="images/ui-designer@1.jpg"
+                alt="man with beard"
+                width="270"
+                height="260"
+              />
 
               <h4 class="our-team__team-member">John Doe</h4>
               <p class="our-team__position">UI Designer</p>
